dependabotの設定を修正

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,4 +4,5 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
-    labels: 🤖dependencies
+    labels:
+      - "🤖dependencies"
